[build-system]
requires = [
    "scikit-build-core>=0.9.0",
    "pybind11",
    "setuptools>=42",
    "wheel",
    #"litgen"
]
build-backend = "scikit_build_core.build"

[project]
name = "pypolydim"
version = "0.0.21"
description = "Bindings Python for PolyDiM&GeDiM based on pybind11"
authors = [
    { name = "Gioana Teora", email = "gioana.teora@polito.it" },
    { name = "Fabio Vicini", email = "fabio.vicini@polito.it" }
]
maintainers = [
    { name = "Gioana Teora", email = "gioana.teora@polito.it" }
]
requires-python = ">=3.11"
license = { text = "GPL" }
readme = "README.md"
classifiers = [
    "Programming Language :: Python :: 3",
    "Programming Language :: C++",
    "License :: OSI Approved :: GNU General Public License v3 (GPLv3)",
    "Operating System :: POSIX :: Linux",
    "Operating System :: MacOS"
]
keywords = ["vem", "fem", "mesh", "dfn", "adaptativity", "geometry", "voronoi", "tetgen", "triangle"]

[project.urls]
Homepage = "https://www.polydim.it/"
Repository = "https://github.com/AURION-Polito/PolyDiM/"
Documentation = "https://docs.polydim.it/"
Issues = "https://github.com/AURION-Polito/PolyDiM/issues"

[tool.scikit-build]
wheel.expand-macos-universal-tags = true

[tool.scikit-build.cmake]
args = [
    "-DCMAKE_BUILD_TYPE=Release",
    "-DENABLE_TRIANGLE=ON",
    "-DENABLE_TETGEN=ON",
    "-DENABLE_VORO=ON",
    "-DPYBIND=ON",
    "-DCMAKE_PREFIX_PATH=./.venv/lib/python3.12/site-packages/pybind11/share/cmake/pybind11;/opt/hostedtoolcache/Python/3.12.11/x64/lib/python3.12/site-packages/pybind11/share/cmake/pybind11;./external/Main_Install/triangle;./external/Main_Install/tetgen;./external/Main_Install/voro"
]

[tool.scikit-build.build]
tool-args = ["-j", "6"]

# Install system library
[tool.cibuildwheel]
#build = "cp312-*"
skip = [ "*musllinux*" ]
before-build = [
    "cd PolyDiM",
    "git checkout fem_on_cube",
    "cd gedim",
    "git checkout new_fem_on_cube",
    "cd ../..",
    "cmake -S PolyDiM/gedim/3rd_party_libraries -B external -DCMAKE_BUILD_TYPE=Release -DINSTALL_LAPACK=OFF -DINSTALL_EIGEN3=OFF",
    "(cd external && make -j 6)"]

